--- a/AngularJS/index.html
+++ b/AngularJS/index.html
@@ -15,7 +15,8 @@
     <script src="controller/deptController.js"></script>
     <script src="controller/loginController.js"></script>
     <script src="service/service.js"></script>
-
+    <script src="service/deptService.js"></script>
+    
     <base href="/">
 </head>
  <body>
